--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -52,6 +53,8 @@
     "framer-motion": "^11.0.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
